[tool.poetry]
name = "python-jam"
version = "0.1.0"
description = "Python Library for justauthenticate.me authentication"
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7"
python-jwt = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
