[tool.poetry]
name = "python-jam"
version = "1.0.0"
description = "Asynchronous python Library for justauthenticate.me authentication"
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7"
python-jwt = "^3.3"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.3.1"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
aioresponses = "^0.7.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
